12/09/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 3.1.1.1 'Arch Lector':
	- More CLI parameters added.
	- Redis allocation statistics fixed.
	- TODO: cli lines configurable.

12/08/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 3.1.1.0 'Arch Lector':
	- Telnet CLI.
	- RFC 6062 internal messaging fixed.
	- Server relay endpoints (a non-standard feature).
	- "atomic line" stdout log print.
	- printed help minor fix.
	- client program does not necessary 
		require certificate for TLS.
	- docs fixes.
	- allocation quota bug fixed.

11/29/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 3.0.2.1 'Practical Frost':
	- TCP stability fixes.
	- RFC 6062 "first packet(s)" bug fixed.
	- RFC 6062 stability fixes.
	- Multithreaded Mobile ICE.

11/28/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 3.0.1.4 'Practical Frost':
	- CentOS/Fedora packaging fixed.
	- PID file fixed.

11/26/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 3.0.1.3 'Practical Frost':
	- Misc cosmetic changes.
	- CentOS/Fedora packaging fixed.

11/25/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 3.0.1.2 'Practical Frost':
	- Mobility draft implemented.
	- DTLS communications fixes.
	- UDP Linux optimization.
	- Log output time starts with 0.
	- A new "drop root privileges" options:
		--proc-user and --proc-group added.
	- SHA256 agility updated: 426 error code on too weak SHA function.
	- "-m 0" and "-m 1" options improved.
	- non-threading environment support dropped.
	- stability fixes.
	- OpenSUSE support added.

11/10/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 3.0.0.0 'Practical Frost':
	- New network engine for Linux kernel 3.9+.

11/08/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.7.2 'Harding Grim':
	- SHA256 agility updated: 441 error code on too weak SHA function.

11/07/2013 Oleg Moskalenko <mom040267@gmail.com>
Version 2.6.7.1 'Harding Grim':
	- CentOS  / Fedora uninstall script.
	- Debian compilation error fixed.
	- OpenSSL 0.9.7 and earlier build fixed.