@@ -387,7 +387,7 @@ int main(int argc, char **argv)
 		SSL_load_error_strings();
 		OpenSSL_add_ssl_algorithms();
 
-		const char *csuite = "DEFAULT";
+		const char *csuite = "DH";
 		if(use_null_cipher)
 		  csuite = "eNULL";
 
