@@ -3,6 +3,7 @@ Version 3.1.1.1 'Arch Lector':
 	- More CLI parameters added.
 	- Redis allocation statistics fixed.
 	- TODO: cli lines configurable.
+	- TODO: uclient cipher suite configurable.
 
 12/08/2013 Oleg Moskalenko <mom040267@gmail.com>
 Version 3.1.1.0 'Arch Lector':
